# open-secretary

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: calendar.md  cli.md  daily-summary-setup.md  gateway.md  llm.md  messenger.md  scheduler.md  shared.md
src/: config.py  main.py  pipeline.py
src/calendar/: __init__.py  service.py
src/cli/: calendar_setup.py  config_ops.py  constants.py  launchd.py  main.py  menu.py  parser.py  prompts.py  setup_flow.py  telegram_setup.py
src/gateway/: calendar_tool.py  main.py  memory.py  service.py
src/llm/: __init__.py  agent.py  service.py
src/messenger/: __init__.py  telegram.py
src/scheduler/: __init__.py  service.py
src/shared/: __init__.py  models.py
tests/: test_calendar_range.py  test_calendar_service.py  test_config.py  test_gateway_calendar_tool.py  test_gateway_memory.py  test_gateway_service.py  test_llm.py  test_pipeline.py  test_scheduler.py
